--- a/package.json
+++ b/package.json
@@ -50,13 +50,14 @@
     "param-case": "^3.0.4",
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-highlight": "^5.0.2",
+    "rehype-pretty-code": "^0.0.5",
     "rehype-slug": "^5.0.1",
     "remark-external-links": "^9.0.1",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "sade": "^1.8.1",
+    "shiki": "^0.10.0",
     "simple-git-hooks": "^2.7.0",
     "strip-indent": "^4.0.0",
     "unified": "^10.1.1",
