--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "lib": ["ES2020"],
+    "lib": ["DOM", "ES2020"],
     "module": "ES2020",
     "moduleResolution": "Node",
     "outDir": "lib",
