--- a/package.json
+++ b/package.json
@@ -33,57 +33,58 @@
   },
   "dependencies": {
     "camel-case": "^4.1.2",
-    "chokidar": "^3.5.2",
-    "fs-extra": "^10.0.0",
+    "chokidar": "^3.5.3",
+    "esbuild": "^0.15.10",
+    "fs-extra": "^10.1.0",
     "github-slugger": "^1.4.0",
-    "globby": "^12.0.2",
+    "globby": "^13.1.2",
     "gray-matter": "^4.0.3",
     "hast-util-has-property": "^2.0.0",
     "hast-util-heading-rank": "^2.1.0",
-    "hast-util-to-mdast": "^8.3.0",
+    "hast-util-to-mdast": "^8.4.1",
     "hast-util-to-string": "^2.0.0",
     "html-minifier": "^4.0.0",
-    "kleur": "^4.1.4",
-    "lint-staged": "^12.1.7",
+    "kleur": "^4.1.5",
+    "lint-staged": "^13.0.3",
     "lodash.template": "^4.5.0",
-    "mdast-util-to-markdown": "^1.2.6",
+    "mdast-util-to-markdown": "^1.3.0",
     "param-case": "^3.0.4",
-    "rehype": "^12.0.0",
+    "rehype": "^12.0.1",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.0.5",
+    "rehype-pretty-code": "^0.3.2",
     "rehype-slug": "^5.0.1",
     "remark-external-links": "^9.0.1",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "sade": "^1.8.1",
-    "shiki": "^0.10.0",
-    "simple-git-hooks": "^2.7.0",
+    "shiki": "^0.11.1",
+    "simple-git-hooks": "^2.8.0",
     "strip-indent": "^4.0.0",
-    "unified": "^10.1.1",
-    "unist-util-visit": "^4.1.0"
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/github-slugger": "^1.3.0",
     "@types/hast": "^2.3.4",
     "@types/html-minifier": "^4.0.2",
-    "@types/lodash.template": "^4.5.0",
+    "@types/lodash.template": "^4.5.1",
     "@types/mdast": "^3.0.10",
-    "esbuild": "^0.14.10",
-    "eslint": "^8.6.0",
+    "eslint": "^8.25.0",
     "eslint-config-yuanqing": "^0.0.6",
-    "prettier": "^2.5.1",
-    "sirv-cli": "^2.0.1",
-    "tsm": "^2.2.1",
-    "typescript": "^4.5.4"
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "sirv-cli": "^2.0.2",
+    "typescript": "^4.8.4"
   },
   "scripts": {
-    "build": "yarn run clean && tsc --build",
-    "clean": "rm -rf '*.log' lib",
+    "build": "npm run clean && tsc --build",
+    "clean": "rimraf '*.log' lib",
     "fix": "eslint --fix 'src/**/*.ts'",
     "lint": "eslint 'src/**/*.ts'",
-    "reset": "yarn run clean && rm -rf node_modules yarn.lock && yarn install"
+    "reset": "npm run clean && rimraf node_modules package-lock.json && npm install && npm run simple-git-hooks",
+    "simple-git-hooks": "simple-git-hooks"
   },
   "eslintConfig": {
     "extends": "eslint-config-yuanqing"
@@ -95,7 +96,7 @@
   },
   "prettier": "eslint-config-yuanqing/prettier",
   "simple-git-hooks": {
-    "pre-commit": "yarn run lint-staged",
-    "pre-push": "yarn run lint && yarn run fix && yarn run build"
+    "pre-commit": "npx lint-staged",
+    "pre-push": "npm run lint && npm run fix && npm run build"
   }
 }
