--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
   },
   "type": "module",
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   },
   "files": [
     "lib"
   ],
   "bin": {
-    "build-website": "lib/cli.js"
+    "build-website": "./lib/cli.js"
   },
   "dependencies": {
     "camel-case": "^4.1.2",
     "chokidar": "^3.5.3",
-    "esbuild": "^0.15.10",
-    "fs-extra": "^10.1.0",
-    "github-slugger": "^1.4.0",
-    "globby": "^13.1.2",
+    "esbuild": "^0.16.11",
+    "fs-extra": "^11.1.0",
+    "github-slugger": "^2.0.0",
+    "globby": "^13.1.3",
     "gray-matter": "^4.0.3",
     "hast-util-has-property": "^2.0.0",
     "hast-util-heading-rank": "^2.1.0",
@@ -45,21 +45,21 @@
     "hast-util-to-string": "^2.0.0",
     "html-minifier": "^4.0.0",
     "kleur": "^4.1.5",
-    "lint-staged": "^13.0.3",
+    "lint-staged": "^13.1.0",
     "lodash.template": "^4.5.0",
-    "mdast-util-to-markdown": "^1.3.0",
+    "mdast-util-to-markdown": "^1.4.0",
     "param-case": "^3.0.4",
     "rehype": "^12.0.1",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.3.2",
-    "rehype-slug": "^5.0.1",
+    "rehype-pretty-code": "^0.6.0",
+    "rehype-slug": "^5.1.0",
     "remark-external-links": "^9.0.1",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "sade": "^1.8.1",
-    "shiki": "^0.11.1",
-    "simple-git-hooks": "^2.8.0",
+    "shiki": "^0.12.1",
+    "simple-git-hooks": "^2.8.1",
     "strip-indent": "^4.0.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1"
@@ -71,20 +71,27 @@
     "@types/html-minifier": "^4.0.2",
     "@types/lodash.template": "^4.5.1",
     "@types/mdast": "^3.0.10",
-    "eslint": "^8.25.0",
-    "eslint-config-yuanqing": "^0.0.6",
-    "prettier": "^2.7.1",
+    "eslint": "^8.30.0",
+    "eslint-config-yuanqing": "0.0.7",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
+    "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "sirv-cli": "^2.0.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "scripts": {
-    "build": "npm run clean && tsc --build",
+    "prebuild": "npm run clean",
+    "build": "tsc --build",
     "clean": "rimraf '*.log' lib",
     "fix": "eslint --fix 'src/**/*.ts'",
     "lint": "eslint 'src/**/*.ts'",
-    "reset": "npm run clean && rimraf node_modules package-lock.json && npm install && npm run simple-git-hooks",
-    "simple-git-hooks": "simple-git-hooks"
+    "postinstall": "simple-git-hooks",
+    "reset": "npm run clean && rimraf node_modules package-lock.json && npm install"
   },
   "eslintConfig": {
     "extends": "eslint-config-yuanqing"
